tests/positive/maps/basic/input.ci
void main() {
    int[string] scores = [];
    scores["alice"] = 10;
    scores["bob"] = 7;
    print(toString(scores["alice"]) + "\n");
    print(toString(scores["carol"]) + "\n");
}
