tests/negative/runtime/arrayget_out_of_bounds/input.ci
void main() {
    int[] xs = [1];
    print(toString(arrayGet(xs, 1)) + "\n");
}
